compiler/testData/cli/js/diagnosticForClassLiteral.out
compiler/testData/cli/js/diagnosticForClassLiteral.kt:6:5: error: cannot translate (not supported yet): 'A::class'
    A::class
    ^
COMPILATION_ERROR
