compiler/testData/cli/js/diagnosticForClassLiteral.kt
package foo

class A

fun test() {
    A::class
}
